[tool.poetry]
name = "qrbill-demo"
version = "0.1.0"
description = ""
authors = ["qwykx <vonkaenel.sacha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
qrbill = "^1.1.0"
svglib = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
